// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a collapsed expandable BlockCard 1`] = `
<div
  className="block-card card"
  data-block-id="1"
  data-block-type="mock"
>
  <div
    className="card-header"
  >
    <div
      onClick={[Function]}
    >
      <div>
        Mocked Block
      </div>
      <i
        className="fas fa-caret-down collapsed"
      />
    </div>
  </div>
  <div
    aria-expanded={null}
    className="collapse"
  >
    <div
      className="card-body"
    >
      <p>
        mocked card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders a collapsed expandable BlockCard with not valid data 1`] = `
<div
  className="block-card card"
  data-block-id="1"
  data-block-type="mock"
>
  <div
    className="card-header"
  >
    <div
      onClick={[Function]}
    >
      <div>
        <i
          className="fas fa-exclamation-triangle"
        />
        Mocked Block
      </div>
      <i
        className="fas fa-caret-down collapsed"
      />
    </div>
  </div>
  <div
    aria-expanded={null}
    className="collapse"
  >
    <div
      className="card-body"
    >
      <p>
        mocked card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders a collapsed not-expandable BlockCard 1`] = `
<div
  className="block-card card"
  data-block-id="1"
  data-block-type="mock"
>
  <div
    className="card-header"
  >
    <div
      onClick={[Function]}
    >
      <div>
        Mocked Block
      </div>
      <i
        className="fas fa-caret-down collapsed"
      />
    </div>
  </div>
  <div
    aria-expanded={null}
    className="collapse"
  >
    <div
      className="card-body"
    >
      <p>
        mocked card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders a expanded BlockCard 1`] = `
<div
  className="block-card card"
  data-block-id="1"
  data-block-type="mock"
>
  <div
    className="card-header"
  >
    <div
      onClick={[Function]}
    >
      <div>
        Mocked Block
      </div>
      <i
        className="fas fa-caret-down expanded"
      />
    </div>
  </div>
  <div
    aria-expanded={null}
    className="collapse show"
  >
    <div
      className="card-body"
    >
      <p>
        mocked card content
      </p>
    </div>
  </div>
</div>
`;
